# threshold-fhe

./: .gitignore  Cargo.toml  Makefile.toml  README.md  SECURITY.md  build.rs  coverage.sh  threshold-benchmark.md
benches/: algebra.rs  bench_prss.rs  bench_switch_and_squash.rs  bgv.rs  bit_dec.rs  ceremony.rs  ddec.rs  decoding.rs  prep.rs
conf-trace/: Cargo.toml  README.md
conf-trace/src/: conf.rs  grpc.rs  lib.rs  metrics.rs  metrics_names.rs  telemetry.rs
config/: moby.toml  mobygo.toml
docker/: local.dockerfile
docker/scripts/: lan1.sh  lan10.sh  off.sh  runinallcontainers.sh  wan.sh
docs/: threshold-benchmark.md
examples/: distributed_decryption.rs
experiments/templates/: conf.toml.j2  docker-compose.yml.j2  otel-collector-config.yaml
protos/: choreography.proto  gnetworking.proto
src/: allocator.rs  commitment.rs  file_handling.rs  lib.rs  session_id.rs  thread_handles.rs  tls_certs.rs
src/algebra/: base_ring.rs  bivariate.rs  error_correction.rs  mod.rs  poly.rs  structure_traits.rs  syndrome.rs
src/algebra/galois_fields/: common.rs  gf128.rs  gf16.rs  gf256.rs  gf32.rs  gf64.rs  gf8.rs  mod.rs
src/algebra/galois_rings/: common.rs  degree_3.rs  degree_4.rs  degree_5.rs  degree_6.rs  degree_7.rs  degree_8.rs  mod.rs  utils.rs
src/choreography/: choreographer.rs  grpc.rs  mod.rs  requests.rs
src/conf/: choreo.rs  mod.rs  party.rs
src/error/: error_handler.rs
src/execution/: config.rs  constants.rs  keyset_config.rs  mod.rs  random.rs
src/execution/communication/: broadcast.rs  p2p.rs
src/execution/endpoints/: decryption.rs  decryption_non_wasm.rs  keygen.rs  reconstruct.rs
src/execution/large_execution/: coinflip.rs  constants.rs  double_sharing.rs  local_double_share.rs  local_single_share.rs  offline.rs  share_dispute.rs  single_sharing.rs  vss.rs
src/execution/online/: bit_manipulation.rs  gen_bits.rs  reshare.rs  secret_distributions.rs  triple.rs
src/execution/online/preprocessing/: constants.rs  dummy.rs  mod.rs  orchestrator.rs
src/execution/online/preprocessing/memory/: bitdec.rs  dkg.rs  mod.rs  noiseflood.rs
src/execution/online/preprocessing/orchestration/: dkg_orchestrator.rs  mod.rs  progress_tracker.rs
src/execution/online/preprocessing/orchestration/consumers/: bits_aggregator.rs  dkg_bits_processor.rs  mod.rs  randoms_aggregator.rs  triples_aggregator.rs
src/execution/online/preprocessing/orchestration/producers/: bits_producer.rs  common.rs  mod.rs  randoms_producer.rs  triples_producer.rs
src/execution/online/preprocessing/redis/: bitdec.rs  dkg.rs  mod.rs  noiseflood.rs
src/execution/runtime/: party.rs  session.rs  test_runtime.rs
src/execution/sharing/: constants.rs  input.rs  open.rs  shamir.rs  share.rs
src/execution/small_execution/: agree_random.rs  offline.rs  prf.rs  prss.rs
src/execution/tfhe_internals/: compression_decompression_key.rs  ggsw_ciphertext.rs  glwe_ciphertext.rs  glwe_key.rs  lwe_bootstrap_key.rs  lwe_bootstrap_key_generation.rs  lwe_ciphertext.rs  lwe_key.rs  lwe_keyswitch_key.rs  lwe_keyswitch_key_generation.rs  lwe_packing_keyswitch_key.rs  lwe_packing_keyswitch_key_generation.rs  parameters.rs  randomness.rs  raw_parameters.rs  switch_and_squash.rs  test_feature.rs  utils.rs
src/execution/zk/: ceremony.rs  constants.rs
src/experimental/: constants.rs  gen_bits_odd.rs  mod.rs  random.rs
src/experimental/algebra/: crt.rs  cyclotomic.rs  integers.rs  levels.rs  ntt.rs
src/experimental/bfv/: basics.rs
src/experimental/bgv/: basics.rs  ddec.rs  dkg.rs  dkg_orchestrator.rs  dkg_preproc.rs  endpoints.rs  runtime.rs  utils.rs
src/experimental/choreography/: choreographer.rs  grpc.rs  requests.rs
src/grpc/: mod.rs  server.rs
src/networking/: constants.rs  grpc.rs  local.rs  mod.rs  sending_service.rs  value.rs
src/tests/: helper.rs  mod.rs  test_data_setup.rs
src/tests/config/: ddec_no_peers.toml  ddec_test.toml  error_conf.toml
test_scripts/: bgv_test_script_fake_dkg.sh  bgv_test_script_real_dkg.sh  tfhe_test_script_fake_dkg.sh  tfhe_test_script_real_dkg.sh
tests/: integration_redis.rs
