[package]
name = "conf-trace"
edition = "2021"
version = "0.1.0"
homepage = "https://zama.ai/"
license = "BSD-3-Clause-Clear"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
anyhow = "=1.0.93"
config = "=0.15.8"
http = "=1.2.0"
lazy_static = "=1.5.0"
opentelemetry = { version = "=0.27.1", features = ["metrics"] }
opentelemetry-http = "=0.27.0"
opentelemetry-otlp = { version = "=0.27.0", features = ["tokio"] }
opentelemetry-prometheus = "0.27.0"
opentelemetry-semantic-conventions = "=0.27.0"
opentelemetry-stdout = { version = "=0.27.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.27.1", features = ["rt-tokio", "logs", "metrics"] }
prometheus = { version = "0.13", features = ["process"] }
tokio = { version = "=1.43.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
serde = { version = "=1.0.217", features = ["derive", "rc"] }
strum = "=0.26.3"
strum_macros = "=0.26.4"
thiserror = "=2.0.11"
tonic = "=0.12.3"
tracing = { version = "=0.1.41", features = ["log", "async-await"] }
tracing-opentelemetry = "=0.28.0"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-test = "0.2"
typed-builder = "=0.20.0"
uuid = { version = "=1.11.0", features = ["v4", "fast-rng"] }

[features]
default = []
